style/board.css
/* ... */
.edit-subtask-input {
  width: 350px;
  height: 30px;
  font-size: 20px;
}

.subtask-input-container {
  
  display: flex;
  align-items: center;
}

.editanddeletebuttonsub {
  margin-top: 10px;
}

#subtasks {
  flex-grow: 1;
  padding: 5px;
  padding-right: 30px; /* Platz für das Icon */
  border-radius: 5px;
}

.icons-wrapper {
  display: flex;
  align-items: center;
  margin-left: -65px; /* Verschiebt die Icons ins Eingabefeld */
}

.clear-subtask-icon {
  cursor: pointer;
  width: 25px;
  height: 35px;
}

.add-subtask-icon {
  margin-left: 5px;
  width: 15px;
  height: 15px;
  cursor: pointer;
  filter: brightness(0) saturate(100%) invert(18%) sepia(0%) saturate(0%) hue-rotate(324deg) brightness(91%) contrast(86%);
}

.hidden {
  display: none;
}

.addTaskAssignedToButtonEdit {
  width: 450px;
}


.inputsubtaskedit {
  padding-right: 30px; 
  width: 450px;
  box-sizing: border-box;
  border: 1px solid var(--border-grey);
  border-radius: 10px;
  background-color: var(--white);
  padding: 10px 30px 10px 10px;
  font-size: 20px;
  font-weight: 400;
  line-height: 24px;
  font-family: 'Inter';
  
}

.divideredit {
  width: 1px;
  height: 20px;
  background-color: #ccc;
  margin-left: 5px;
  margin-right: 5px;
}



/*Style Boardseite Progressbar  */
.Progress {
  display: flex;
  align-items: center;
  margin-left: 15px;
}


.progress-bar-container {
  background-color: #e0e0e0;
  border-radius: 5px;
  overflow: hidden;
  height: 10px;
 
  width: 55%;
  margin-right: 5px;
  position: relative;
  display: inline-block;
  
}

.progress-bar-container .progress-bar::after {
  content: attr(data-tooltip);
  visibility: hidden;
  background-color: black;
  color: #fff;
  text-align: center;
  border-radius: 5px;
  padding: 5px;
  position: absolute;
  z-index: 1;
  bottom: 125%; /* Position the tooltip above the progress bar */
  left: 50%;
  transform: translateX(-50%);
  opacity: 0;
  transition: opacity 0.3s;
}

.progress-bar-container .progress-bar:hover::after {
  visibility: visible;
  opacity: 1;
}

.progress-bar {
  height: 100%;
  background-color: #3D84FF; /* Farbe des Fortschrittsbalkens */
  transition: width 0.3s ease-in-out;
  
}

.subtask-progress {
  width: 100px;
  white-space: nowrap;
  font-size: 14px;
  margin-right: 5px;
}

.subtasks-container {
  margin-bottom: 40px;
}

.taskCategoryHTML {
  font-size: 24px;
  margin-left: -15px;
  
}

.subtaskhtml {
  margin-bottom: 20px;
}

.subtask-item {
  
  margin-bottom: 20px;
  border-radius: 10px;
  
  display: flex;
  align-items: center; /* Aligns the items in the center vertically */
  

  
 
}

.subtask-item label {
  display: flex;
  align-items: flex-start; 
  height: auto; /* Ermöglicht, dass das Label wächst, wenn der Inhalt es erfordert */
  max-height: 4.5em; /* Beschränkt die Höhe auf etwa 3 Zeilen (basierend auf einer line-height von 1.5em) */
  overflow-y: auto; /* Zeigt eine Scroll-Leiste an, wenn der Inhalt die max-height überschreitet */
  width: 100%;
  margin-bottom: 10px;
}

.subtasktitles {
 
  display: block;
  line-height: 1.5em;
  
}



.styled-checkbox {
  opacity: 0;
  position: absolute;
  width: 0;
  height: 0;
  margin: 0;
  padding: 0;
  z-index: -1; 
  cursor: pointer;

}

.styled-checkbox + span {
  display: flex;
  align-items: flex-start;
   position: relative;
  

}

.styled-checkbox + span::before {
  content: '';
  display: inline-block;
  box-sizing: border-box;
  width: 18px !important;
  height: 18px !important;
  background-color: #fff;
  border: 2px solid #3a3a3a;
  border-radius: 3px;
  margin-right: 8px;
 
  margin-top: 3px;
  line-height: 16px;
  cursor: pointer;
}

.styled-checkbox:checked + span::before {
  content: '✔';
  display: inline-flex;
  align-items: center;
  justify-content: center;
  width: 15px ;
  height: 15px ;
  background-color: #fff;
  border: 2px solid #3a3a3a;
  border-radius: 3px;
  color: #3a3a3a;
  
  line-height: 16px;
  font-size: 15px;
  font-weight: bold;
  cursor: pointer;
  margin-right: 8px;
}





.dueDate {
  margin-left: 20px;
  color: #000000;
}

.taskPriority {
  margin-left: 20px;
  color: #000000;
}

.Subtasks {
  margin-bottom: 20px;
}

.taskTitleOverlay {
  margin-top: 10px;
  margin-bottom: 10px;
  font-size: 32px;
 
}

.AssignedTitle {
  margin-bottom: 10px;
}

.assignedtoItem {
  margin: 10px;
}

.editanddeletetask {
  display: flex;
  justify-content: flex-end;
  align-items: flex-end;

}

.editbuttontask {
  display: flex;
  justify-content: space-between;
  background-image: url(../IMGicons/edit.svg);
  background-repeat: no-repeat;
  background-position: left 1px center; 
  cursor: pointer;
  width: 44px;
  height: 24px;
  padding-left: 30px; 
  font-size: 16px;
  font-weight: 400;
  color: var(--deep-grey);
}

.deletebuttontask {
  background-image: url(../IMGicons/delete.svg);
  cursor: pointer;
  background-repeat: no-repeat;
  width: 44px;
  height: 24px;
  padding-left: 24px;
  margin-right: 12px;
  font-size: 16px;
  font-weight: 400;
  color: var(--deep-grey);
  border-right: 1px solid grey;
  padding-right: 20px;
  
}

.deletebuttontask:hover {
  filter: brightness(0) saturate(100%) invert(38%) sepia(85%) saturate(509%) hue-rotate(174deg) brightness(95%) contrast(92%);
}

.editbuttontask:hover {
  filter: brightness(0) saturate(100%) invert(38%) sepia(85%) saturate(509%) hue-rotate(174deg) brightness(95%) contrast(92%);
}


/*Style Boardseite einzelne Tasks  */
.task-cards {
  display: flex;
  flex-wrap: wrap;
  flex-direction: column;
  justify-content: space-between;
  border-radius: 24px;
  margin: 10px 0;
  cursor: grab;
  gap: 24px;
  box-shadow: 0px 0px 10px 3px rgba(0, 0, 0, 0.08);
  background-color: var(--white);
  flex: 0 0 240px;
}

.task-cards:active {
  cursor: grabbing !important;
  -webkit-animation: rotate-90-cw 0.4s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
	        animation: rotate-90-cw 0.4s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
}
/* ... */

